fixed bug on gallery page - images overflowing onto footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,6 +307,7 @@ footer h3 {
     column-gap: 0px;
     display: flex;
     flex-wrap: wrap;
+    overflow: hidden;
 }
 
 .gallery > img {
